# c-algorithm

./: CMakeLists.txt
data_structure/: CMakeLists.txt
data_structure/list/: CMakeLists.txt  list.c  list.h  main.c
tests/: CMakeLists.txt  test.c
